infrastructure/network/cloudflare-tunnel/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudflare-tunnel
  labels:
    goldship.platform/component: cloudflare-tunnel
    goldship.platform/category: network
